--- a/problems/templates/problems/device_search.html
+++ b/problems/templates/problems/device_search.html
@@ -3,15 +3,15 @@
 {% load static %}
 <head>
     <meta charset="utf-8">
-    <title>SearchMed</title>
-    <meta name="twitter:title" content="SearchMed">
-    <meta property="og:title" content="SearchMed">
-    <meta property="og:title" content="SearchMed">
-    <meta property="twitter:title" content="SearchMed">
+    <title>SafeMed</title>
+    <meta name="twitter:title" content="SafeMed">
+    <meta property="og:title" content="SafeMed">
+    <meta property="og:title" content="SafeMed">
+    <meta property="twitter:title" content="SafeMed">
     <meta property="twitter:card" content="summary">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="cf-2fa-verify" content="0fab03255b86805">
-    <meta name="description" content="This is the website of SearchMed.">
+    <meta name="description" content="This is the website of SafeMed.">
     <link rel="shortcut icon" type="image/x-icon" href="https://media.istockphoto.com/id/1435982017/photo/yellow-plus-sign-isolated-on-white-background.jpg?s=1024x1024&w=is&k=20&c=pyrqm1TFGOFjG0vd_lQwPWGb8sOYCdDIJiuHhcJHXIQ=">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -35,7 +35,7 @@
         <div class="flex flex-col md:py-16">
             <div class="flex flex-col flex-grow  md:flex-row">
                 <div class="flex flex-row items-center flex-none p-4 gap-2 md:flex-col md:items-start">
-                    <p class="text-2xl font-bold">SearchMed</p>
+                    <p class="text-2xl font-bold">SafeMed</p>
                     <a onclick="document.getElementById('manufacturer_name_search').value='abbott';document.getElementById('devsearch').submit();">Abbott</a>
                     <a onclick="document.getElementById('manufacturer_name_search').value='boston scientific';document.getElementById('devsearch').submit();">Boston Scientific</a>
                     <a onclick="document.getElementById('manufacturer_name_search').value='medtronic';document.getElementById('devsearch').submit();">Medtronic</a>
