prod flag in .env

--- a/problems/templates/problems/device_search.html
+++ b/problems/templates/problems/device_search.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="flex flex-col flex-grow p-4">
                     <div class="pb-32 mx-auto max-w-screen-sm antialiased prose">
-                        <p><h3>Search for a medical device and click on its link to see its safety history.</h3></p>
+                        <p><h3>Search and click on a medical device to see its safety history.</h3></p>
                         <div class="flex w-full justify-center">
                             <form id = "devsearch" action = "{% url 'device_search' %}" method="post">
                                 {% csrf_token %}
