mobile zoom fix

--- a/problems/templates/problems/device_search.html
+++ b/problems/templates/problems/device_search.html
@@ -16,7 +16,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="https://media.istockphoto.com/id/1435982017/photo/yellow-plus-sign-isolated-on-white-background.jpg?s=1024x1024&w=is&k=20&c=pyrqm1TFGOFjG0vd_lQwPWGb8sOYCdDIJiuHhcJHXIQ=">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&amp;display=swap"
             rel="stylesheet" data-optimized-fonts="true">
         <link
