--- a/problems/templates/problems/device_search.html
+++ b/problems/templates/problems/device_search.html
@@ -53,10 +53,10 @@
                                     <div class="flex w-full justify-center">
                                         <table>
                                             <tr>
-                                                <td>Device Name:</td><td><input id="device_name_search" type="text" name="device_name_search" value="{{current_device_name_search}}" onkeypress="if(event.keyCode === 13){document.getElementById('devsearch').submit()}"></td>
+                                                <td>Device Name:</td><td><input id="device_name_search" type="text" style="font-size:16.1px" name="device_name_search" value="{{current_device_name_search}}" onkeypress="if(event.keyCode === 13){document.getElementById('devsearch').submit()}"></td>
                                             </tr>
                                             <tr>
-                                                <td>Manufacturer Name:</td><td><input id="manufacturer_name_search" type="text" name="manufacturer_name_search" value="{{current_manufacturer_name_search}}" onkeypress="if(event.keyCode === 13){document.getElementById('devsearch').submit()}"></td>
+                                                <td>Manufacturer Name:</td><td><input id="manufacturer_name_search" type="text" style="font-size:16.1px" name="manufacturer_name_search" value="{{current_manufacturer_name_search}}" onkeypress="if(event.keyCode === 13){document.getElementById('devsearch').submit()}"></td>
                                             </tr>
                                         </table>
                                     </div>
