--- a/problems/templates/problems/device_search.html
+++ b/problems/templates/problems/device_search.html
@@ -37,13 +37,13 @@
         <div id="__next">
             <div class="flex flex-col md:py-16">
                 <div class="flex flex-col flex-grow  md:flex-row">
-                    <div class="flex flex-row items-center flex-none p-4 gap-2 md:flex-col md:items-start">
-                        <p class="text-2xl font-bold">SafeMed</p>
-                        <a onclick="document.getElementById('manufacturer_name_search').value='abbott';document.getElementById('devsearch').submit();">Abbott</a>
-                        <a onclick="document.getElementById('manufacturer_name_search').value='boston scientific';document.getElementById('devsearch').submit();">Boston Scientific</a>
-                        <a onclick="document.getElementById('manufacturer_name_search').value='medtronic';document.getElementById('devsearch').submit();">Medtronic</a>
-                        <a onclick="document.getElementById('manufacturer_name_search').value='stryker';document.getElementById('devsearch').submit();">Stryker</a>
-                    </div>
+                        <div class="flex flex-col items-center flex-none p-4 gap-2 md:items-start">
+                            <p class="text-2xl font-bold">SafeMed</p>
+                            <a onclick="document.getElementById('manufacturer_name_search').value='abbott';document.getElementById('devsearch').submit();">Abbott</a>
+                            <a onclick="document.getElementById('manufacturer_name_search').value='boston scientific';document.getElementById('devsearch').submit();">Boston Scientific</a>
+                            <a onclick="document.getElementById('manufacturer_name_search').value='medtronic';document.getElementById('devsearch').submit();">Medtronic</a>
+                            <a onclick="document.getElementById('manufacturer_name_search').value='stryker';document.getElementById('devsearch').submit();">Stryker</a>
+                        </div>
                     <div class="flex flex-col flex-grow p-4">
                         <div class="pb-32 mx-auto max-w-screen-sm antialiased prose">
                             <p><h3>Search for a medical device to see its safety history.</h3></p>
