--- a/problems/templates/problems/device_info.html
+++ b/problems/templates/problems/device_info.html
@@ -23,6 +23,13 @@
                     <div class="pb-16 mx-auto items-center max-w-screen-sm antialiased prose">
                         <p>{{GenericName}}</p>
                         <p>This device is manufactured by {{Manufacturer}}.</p> 
+                        {% if plots %}
+                            <div class="flex flex-col pb-16 mx-auto items-center">
+                                {{plots.Malfunction | safe}}
+                                {{plots.Injury | safe}}
+                                {{plots.Death | safe}}
+                            </div>
+                        {% endif %}
                         {% if problem_table %}
                             <p>The following problems were reported about this device:</p>
                             {{ problem_table | safe }}
