--- a/problems/templates/problems/base.html
+++ b/problems/templates/problems/base.html
@@ -28,6 +28,7 @@
             href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&amp;display=swap">
         <link rel="stylesheet" href="{% static 'problems/styles/newstyle.css' %}">
         <link rel="stylesheet" href="{% static 'problems/styles/font.css' %}">
+        <link rel="canonical">
         <!-- <link type="text/css" href="{% static 'problems/styles/newstyle.css' %}">
         <link type="text/css" href="{% static 'problems/styles/font.css' %}"> -->
         <!-- <link rel="stylesheet" href="https://unpkg.com/mvp.css"> -->
