improve mfr name grouping and typo correction

--- a/problems/templates/problems/base.html
+++ b/problems/templates/problems/base.html
@@ -12,7 +12,7 @@
         <meta property="twitter:card" content="summary">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="cf-2fa-verify" content="0fab03255b86805">
-        <meta name="description" content="This is the website of SafeMed.">
+        <meta name="description" content="Welcome to SafeMed.">
         <link rel="shortcut icon" type="image/x-icon" href="https://media.istockphoto.com/id/1435982017/photo/yellow-plus-sign-isolated-on-white-background.jpg?s=1024x1024&w=is&k=20&c=pyrqm1TFGOFjG0vd_lQwPWGb8sOYCdDIJiuHhcJHXIQ=">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
