--- a/problems/templates/problems/home.html
+++ b/problems/templates/problems/home.html
@@ -13,7 +13,9 @@
                     </div>
                 <div class="flex flex-col flex-grow p-4">
                     <div class="pb-16 mx-auto max-w-screen-sm antialiased prose">
-                        <p><h3>Search for a medical device to see its safety history.</h3></p>
+                        <div class="flex w-full justify-center">
+                            <p><h3>Search for a medical device to see its safety history.</h3></p>
+                        </div>
                         <div class="flex w-full justify-center">
                             <form id = "devsearch" action = "{% url 'device_search' %}" method="post">
                                 {% csrf_token %}
